# whereismy

./: .env  .gitignore  README.MD  README.md  alembic.ini  main.py  pyproject.toml  status.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh
alembic/: env.py
alembic/versions/: 276c1612ddc3_initial_database_schema_with_native_.py  66ea6346e892_add_hashed_password_to_user_table.py  b663cbaa06b4_add_role_to_user_table.py
app/whereismy/: config.py
app/whereismy/bot/: main.py  states.py
app/whereismy/bot/handlers/: find_item.py  my_items.py  search_item.py  start.py
app/whereismy/core/: database.py
app/whereismy/core/models/: __init__.py  base.py  category.py  item.py  location.py  user.py
app/whereismy/core/repository/: __init__.py  base.py  category_repository.py  item_repository.py  location_repository.py  user_repository.py
app/whereismy/services/: embedding_service.py  items_service.py
app/whereismy/web/admin/: routes.py
app/whereismy/web/api/: deps.py  main.py  security.py
app/whereismy/web/api/routers/: auth.py  categories.py  items.py  locations.py
app/whereismy/web/api/schemas/: auth.py
app/whereismy/web/templates/: admin_dashboard.html  base.html  edit_item.html  login.html  manage_categories.html  manage_locations.html
cfg/: cfg.yml
whereismy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
